# ctemplate

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  ProjectHome.md  README  README.md  README.windows  aclocal.m4  autogen.sh  configure  configure.ac  ctemplate.sln  google-ctemplate.sln
contrib/: FindCtemplate.cmake
doc/: auto_escape.html  example.html  guide.html  howto.html  index.html  reference.html  tips.html
m4/: ac_rwlock.m4
src/: config.h.in  diff_tpl_auto_escape.cc  make_tpl_varnames_h.cc  per_expand_data.cc  template-converter  template.cc  template_annotator.cc  template_cache.cc  template_dictionary.cc  template_from_string.cc  template_modifiers.cc  template_modifiers_internal.h  template_namelist.cc  template_pathops.cc  template_string.cc
src/base/: arena-inl.h  arena.cc  arena.h  arena.h.in  fileutil.h  macros.h  manual_constructor.h  mutex.h  small_map.h  util.h
src/ctemplate/: find_ptr.h.in  per_expand_data.h.in  str_ref.h.in  template.h.in  template_annotator.h.in  template_cache.h.in  template_dictionary.h.in  template_dictionary_interface.h.in  template_emitter.h.in  template_enums.h.in  template_modifiers.h.in  template_namelist.h.in  template_string.h.in
src/google/: per_expand_data.h.in  template.h.in  template_dictionary.h.in  template_emitter.h.in  template_from_string.h.in  template_modifiers.h.in  template_namelist.h.in  template_string.h.in
src/htmlparser/: fsm_config.py  generate_fsm.py  htmlparser.cc  htmlparser.h  htmlparser_cpp.h  htmlparser_fsm.cc  jsparser.cc  jsparser.h  jsparser_fsm.cc  statemachine.cc
src/tests/: generate_fsm_test.sh  htmlparser_cpp_test.cc  htmlparser_test.cc  make_tpl_varnames_h_unittest.sh  statemachine_test.c  template_cache_test.cc  template_dictionary_unittest.cc  template_modifiers_unittest.cc  template_regtest.cc  template_setglobals_unittest.cc  template_test_util.cc  template_test_util.h  template_test_util_test.cc  template_unittest.cc  (+4 more)
tags/ctemplate-0.2/: ChangeLog  Makefile.am  README  aclocal.m4  configure  configure.ac
tags/ctemplate-0.2/doc/: howto.html
tags/ctemplate-0.2/docs/: index.html
tags/ctemplate-0.2/src/: template.cc  template_namelist.cc
tags/ctemplate-0.2/src/tests/: template_from_string_unittest.cc  template_regtest.cc  template_unittest.cc
tags/ctemplate-0.4/: Makefile.in  aclocal.m4  configure  configure.ac
tags/ctemplate-0.4/doc/: howto.html  index.html
tags/ctemplate-0.4/src/: template.cc  template_dictionary.cc
tags/ctemplate-0.4/src/google/: template.h.in  template_dictionary.h.in
tags/ctemplate-0.4/src/tests/: make_tpl_varnames_h_unittest.sh  template_dictionary_unittest.cc  template_regtest.cc
trunk/: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.windows  aclocal.m4  autogen.sh  configure  configure.ac  google-ctemplate.sln
trunk/doc/: example.html  guide.html  howto.html  index.html  tips.html
trunk/docs/: tips.html
trunk/src/: config.h.in  config_for_unittests.h  diff_tpl_auto_escape.cc  indented_writer.h  make_tpl_varnames_h.cc  per_expand_data.cc  template-converter  template.cc  template_annotator.cc  template_cache.cc  template_dictionary.cc  template_from_string.cc  template_modifiers.cc  template_namelist.cc  template_pathops.cc  template_string.cc
trunk/src/base/: arena-inl.h  arena.cc  arena.h  fileutil.h  macros.h  manual_constructor.h  mutex.h  small_map.h
trunk/src/ctemplate/: find_ptr.h.in  per_expand_data.h.in  str_ref.h.in  template.h.in  template_annotator.h.in  template_cache.h.in  template_dictionary.h.in  template_modifiers.h.in  template_namelist.h.in  template_pathops.h.in  template_string.h.in
trunk/src/google/: template.h.in  template_annotator.h.in  template_dictionary.h.in  template_emitter.h.in  template_enums.h.in  template_from_string.h.in  template_modifiers.h.in  template_namelist.h.in  template_pathops.h.in  template_string.h.in
trunk/src/htmlparser/: htmlparser.cc  htmlparser.h  htmlparser_cpp.h  htmlparser_fsm.config  htmlparser_fsm.h  jsparser_fsm.cc  statemachine.cc  statemachine.h
trunk/src/tests/: diff_tpl_auto_escape_unittest.sh  generate_fsm_c_test.c  generate_fsm_test.sh  htmlparser_cpp_test.cc  htmlparser_test.cc  make_tpl_varnames_h_unittest.sh  template_cache_test.cc  template_dictionary_unittest.cc  template_from_string_unittest.cc  template_modifiers_unittest.cc  template_regtest.cc  template_test_util.cc  template_test_util.h  template_unittest.cc  template_unittest_test_html_dict01.anno_out  template_unittest_test_modifiers_dict01.out
trunk/src/tests/htmlparser_testdata/: simple.html  tags.html
trunk/src/windows/: config.h  port.cc  port.h  preprocess.sh
trunk/src/windows/ctemplate/: str_ref.h  template.h  template_annotator.h  template_cache.h  template_dictionary.h  template_dictionary_interface.h  template_emitter.h  template_enums.h  template_modifiers.h  template_string.h
trunk/src/windows/google/: template.h  template_dictionary.h  template_enums.h  template_from_string.h  template_modifiers.h  template_namelist.h  template_pathops.h  template_string.h
trunk/vsprojects/compile_test/: compile_test.vcproj
trunk/vsprojects/diff_tpl_auto_escape/: diff_tpl_auto_escape.vcproj
trunk/vsprojects/generate_fsm_c_test/: generate_fsm_c_test.vcproj
trunk/vsprojects/htmlparser_test/: htmlparser_test.vcproj
trunk/vsprojects/libctemplate/: libctemplate.vcproj
trunk/vsprojects/make_tpl_varname_h/: make_tpl_varname_h.vcproj
trunk/vsprojects/statemachine_test/: statemachine_test.vcproj
trunk/vsprojects/template_dictionary_unittest/: template_dictionary_unittest.vcproj
trunk/vsprojects/template_from_string_unittest/: template_from_string_unittest.vcproj
trunk/vsprojects/template_regtest/: template_regtest.vcproj
trunk/vsprojects/template_setglobals_unittest/: template_setglobals_unittest.vcproj
trunk/vsprojects/template_test_util_test/: template_test_util_test.vcproj
trunk/vsprojects/template_unittest/: template_unittest.vcproj
trunk/vsprojects/template_unittest_static/: template_unittest_static.vcproj
wiki/: GoogleCtemplate.wiki
(+522 files in other folders)
